--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -9,20 +9,17 @@ on:
       - main
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
-    strategy:
-    matrix:
-    python-version: ["3.10"]
 
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
+      - name: Set up Python
+        uses: actions/setup-python@v2
         with:
-          python-version: ${{ matrix.python-version }}
+        python-version: '3.10'
 
       - name: Install Dependencies
         run: |
