--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ crispy-bootstrap5==0.7
 Django==4.1.7
 django-bootstrap5==22.2
 django-crispy-forms==2.0
+django-js-asset==2.0.0
+django-mptt==0.14.0
 djangorestframework==3.14.0
 exceptiongroup==1.1.0
 flake8==6.0.0
