--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ bpemb==0.3.4
 breadability==0.1.20
 catalogue==2.0.8
 certifi==2022.12.7
+cffi==1.15.1
 chardet==3.0.4
 charset-normalizer==3.1.0
 cleantext==1.1.4
@@ -23,6 +24,7 @@ confection==0.0.4
 conllu==4.5.2
 contourpy==1.0.7
 crispy-bootstrap5==0.7
+cryptography==40.0.2
 cycler==0.11.0
 cymem==2.0.7
 datasets==2.11.0
@@ -39,6 +41,7 @@ djangorestframework==3.14.0
 docopt==0.6.2
 docx2txt==0.8
 ebcdic==1.1.1
+ecdsa==0.18.0
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0-py3-none-any.whl
 eng-to-ipa==0.0.2
 exceptiongroup==1.1.0
@@ -106,8 +109,10 @@ psycopg2==2.9.5
 psycopg2-binary==2.9.5
 py4j==0.10.9.7
 pyarrow==11.0.0
+pyasn1==0.5.0
 pycodestyle==2.10.0
 pycountry==22.3.5
+pycparser==2.21
 pycryptodome==3.17
 pydantic==1.10.7
 pyflakes==3.0.1
@@ -118,6 +123,7 @@ pytesseract==0.3.10
 pytest==7.2.1
 pytest-django==4.5.2
 python-dateutil==2.8.2
+python-jose==3.3.0
 python-Levenshtein==0.21.0
 python-pptx==0.6.21
 pytorch_revgrad==0.2.0
@@ -128,6 +134,7 @@ rapidfuzz==3.0.0
 regex==2023.3.23
 requests==2.28.2
 responses==0.18.0
+rsa==4.9
 s3transfer==0.6.0
 scikit-learn==1.2.2
 scipy==1.10.1
