--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 aiohttp==3.8.4
 aiosignal==1.3.1
+anyio==3.6.2
 argcomplete==1.10.3
 asgiref==3.6.0
 async-timeout==4.0.2
@@ -38,14 +39,17 @@ django-js-asset==2.0.0
 django-mptt==0.14.0
 django-thread==0.0.1
 djangorestframework==3.14.0
+dnspython==2.3.0
 docopt==0.6.2
 docx2txt==0.8
 ebcdic==1.1.1
 ecdsa==0.18.0
+email-validator==2.0.0.post2
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0-py3-none-any.whl
 eng-to-ipa==0.0.2
 exceptiongroup==1.1.0
 extract-msg==0.28.7
+fastapi==0.95.1
 filelock==3.11.0
 flair==0.12.2
 flake8==6.0.0
@@ -57,11 +61,16 @@ future==0.18.3
 fuzzywuzzy==0.18.0
 gdown==4.4.0
 gensim==4.3.1
+h11==0.14.0
+httpcore==0.17.0
+httptools==0.5.0
+httpx==0.24.0
 huggingface-hub==0.13.4
 hyperopt==0.2.7
 idna==3.4
 IMAPClient==2.1.0
 iniconfig==2.0.0
+itsdangerous==2.1.2
 Janome==0.4.2
 Jinja2==3.1.2
 jmespath==1.0.1
@@ -96,6 +105,7 @@ nvidia-cusparse-cu11==11.7.4.91
 nvidia-nccl-cu11==2.14.3
 nvidia-nvtx-cu11==11.7.91
 olefile==0.46
+orjson==3.8.11
 packaging==23.0
 pandas==2.0.0
 pathy==0.10.1
@@ -123,8 +133,10 @@ pytesseract==0.3.10
 pytest==7.2.1
 pytest-django==4.5.2
 python-dateutil==2.8.2
+python-dotenv==1.0.0
 python-jose==3.3.0
 python-Levenshtein==0.21.0
+python-multipart==0.0.6
 python-pptx==0.6.21
 pytorch_revgrad==0.2.0
 pytz==2022.7.1
@@ -143,6 +155,7 @@ sentencepiece==0.1.98
 six==1.12.0
 sklearn==0.0.post4
 smart-open==6.3.0
+sniffio==1.3.0
 sortedcontainers==2.4.0
 soupsieve==2.4.1
 spacy==3.5.2
@@ -152,6 +165,7 @@ SpeechRecognition==3.8.1
 sqlitedict==2.1.0
 sqlparse==0.4.3
 srsly==2.4.6
+starlette==0.26.1
 sumy==0.11.0
 sympy==1.11.1
 tabulate==0.9.0
@@ -171,10 +185,15 @@ typer==0.7.0
 typing_extensions==4.5.0
 tzdata==2023.3
 tzlocal==4.3
+ujson==5.7.0
 urllib3==1.26.15
+uvicorn==0.22.0
+uvloop==0.17.0
 vaderSentiment==3.3.2
 wasabi==1.1.1
+watchfiles==0.19.0
 wcwidth==0.2.6
+websockets==11.0.2
 Wikipedia-API==0.5.8
 wordnik==2.1.3
 wrapt==1.15.0
